--- a/public/css/addon.css
+++ b/public/css/addon.css
@@ -16,3 +16,15 @@
   padding: 20px 40px 20px 0;
   height: 100px;
 }
+
+html {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  height: 100%;
+  margin: 0;
+  overflow-y: hidden;
+  padding: 0;
+}
