--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,13 +14,10 @@
   <script src="//aui-cdn.atlassian.com/aui-adg/5.8.12/js/aui.js" type="text/javascript"></script>
   <script src="//aui-cdn.atlassian.com/aui-adg/5.8.12/js/aui-datepicker.js"></script>
   <script src="//aui-cdn.atlassian.com/aui-adg/5.8.12/js/aui-experimental.js"></script>
-  <script src="https://connect-cdn.atl-paas.net/all.js" type="text/javascript"></script>
-  <script src="https://990d-2-92-80-29.eu.ngrok.io/web-apps/apps/api/documents/api.js" type="text/javascript"></script>
+  <script src="https://connect-cdn.atl-paas.net/all.js" type="text/javascript" data-options = "sizeToParent:true;hideFooter:true;"></script>
+  <script src="https://6528-2-92-80-29.eu.ngrok.io/web-apps/apps/api/documents/api.js" type="text/javascript"></script>
 </head>
 <body class="aui-page-hybrid">
-  <section id="content" role="main">
     {{{body}}}
-  </section>
-  <script src="/js/addon.js"></script>
 </body>
 </html>
