--- a/views/onlyoffice-editor.hbs
+++ b/views/onlyoffice-editor.hbs
@@ -1,9 +1,18 @@
 {{!< layout}}
 <div id="placeholder"></div>
 <script> 
-  $(document).ready(function() {
-    const jsonEditorConfig = JSON.parse(`{{{editorConfig}}}`);
+    $(document).ready(function() {
+        if (typeof DocsAPI === "undefined") {
+            alert("ONLYOFFICE cannot be reached. Please contact admin.");
+            return;
+        }
 
-    var DocEditor = new DocsAPI.DocEditor("placeholder", jsonEditorConfig);
-  });
+        if (error = "{{error}}") {
+            alert(error);
+            return;
+        }
+
+        const jsonEditorConfig = JSON.parse(`{{{editorConfig}}}`);
+        var DocEditor = new DocsAPI.DocEditor("placeholder", jsonEditorConfig);
+    });
 </script>
